--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,11 @@ babel==2.16.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+crispy-bootstrap5==2024.10
 cryptography==43.0.3
 Django==5.0.9
+django-crispy-forms==2.3
+django-money==3.5.3
 django-storages==1.14.4
 django-widget-tweaks==1.5.0
 idna==3.10
